--- a/news_site/news/templates/news/index.html
+++ b/news_site/news/templates/news/index.html
@@ -39,12 +39,11 @@
                             {% if item.photo %}
                                 <img src="{{ item.photo.url }}" alt="" width="350" class="mr-3">
                             {% else %}
-
                                 <img src="https://tourjournal.ru/wp-content/uploads/see3.jpg" alt="" width="350" class="mr-3">
                             {% endif %}
                             <div class="media-body">
                                 <h5 class="card-title">{{ item.title }}</h5>
-                                <p class="card-text">{{ item.content }}</p>
+                                <p class="card-text">{{ item.content|safe|linebreaks|truncatewords:50 }}</p>
                                 <a href="#" class="btn btn-primary">Read more...</a>
                             </div>
                         </div>
