added list category

--- a/news_site/news/templates/news/index.html
+++ b/news_site/news/templates/news/index.html
@@ -28,7 +28,16 @@
     <div class="container mt-3">
         <h1>{{ title }}</h1>
         <div class="row">
-            <div class="col-md-12">
+
+            <div class="col-md-4">
+                <div class="list-group">
+                    {% for item in categories %}
+                        <a href="#" class="list-group-item list-group-item-action">{{ item.title }}</a>
+                    {% endfor %}
+                </div>
+            </div>
+
+            <div class="col-md-8">
                 {% for item in news %}
                 <div class="card mb-3">
                     <div class="card-header">
