--- a/news_site/news/templates/news/index.html
+++ b/news_site/news/templates/news/index.html
@@ -11,7 +11,7 @@
     <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Navbar</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,8 +19,8 @@
 
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="/">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="/">Добавить новость</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Добавить новость</a></li>
             </ul>
         </div>
     </nav>
@@ -29,19 +29,19 @@
         <h1>{{ title }}</h1>
         <div class="row">
 
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="list-group">
                     {% for item in categories %}
-                        <a href="/category/{{ item.pk }}" class="list-group-item list-group-item-action">{{ item.title }}</a>
+                        <a href="{%  url 'category' item.pk %}" class="list-group-item list-group-item-action">{{ item.title }}</a>
                     {% endfor %}
                 </div>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-md-9">
                 {% for item in news %}
                 <div class="card mb-3">
                     <div class="card-header">
-                        Категория: {{ item.category }}
+                        Категория: <a href="{%  url 'category' item.category.pk %}">{{ item.category }}</a>
                     </div>
                     <div class="card-body">
                         <div class="media">
