connected (inherited) base in index

--- a/news_site/templates/base.html
+++ b/news_site/templates/base.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-{% incude 'inc/_nav.html' %}
+{% include 'inc/_nav.html' %}
 
     <div class="container mt-3">
         <div class="row">
