--- a/news_site/news/templates/news/index.html
+++ b/news_site/news/templates/news/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    {{ title }} :: {{ block.super }}
+{% endblock %}
+
 {% block sidebar %}
             <div class="col-md-3">
                 <div class="list-group">
