--- a/news_site/templates/inc/_sidebar.html
+++ b/news_site/templates/inc/_sidebar.html
@@ -1,6 +1,6 @@
 {% load news_tags %}
 
-
+{% comment %}
 <div class="list-group">
     {% get_list_categories as categories%}
     {% for item in categories %}
@@ -9,5 +9,7 @@
 </div>
 
 <br>
+{% endcomment %}
+
 
 {% show_categories  %}
