--- a/news_site/news/templates/news/add_news.html
+++ b/news_site/news/templates/news/add_news.html
@@ -10,5 +10,13 @@
 
 
 {% block content %}
+
 <h1>Добавление новости</h1>
+
+<form action="{% url 'add_news' %}" method="post">
+    {% csrf_token %}
+    {{ form.as_p }} {#выводит поля в отдельном парагрофе#}
+    <button type="submit" class="btn btn-primary btn-block">Добавить новость</button>
+</form>
+
 {% endblock %}
