--- a/news_site/news/templates/news/add_news.html
+++ b/news_site/news/templates/news/add_news.html
@@ -15,7 +15,57 @@
 
 <form action="{% url 'add_news' %}" method="post">
     {% csrf_token %}
-    {{ form.as_p }} {#выводит поля в отдельном парагрофе#}
+    {{ form.as_p }} {#выводит поля в отдельном парагрофе автоматический метод#}
+
+     {% comment %}
+    {#выводит поля в отдельном парагрофе ручной метод#}
+    {{ form.non_field.errors }}
+    <div class="form-group">
+        <label for="{{ form.title.id_for_label }}">Название: </label>
+        {{ form.title }}
+        <div class="invalid-feedback">
+            {{ form.title.errors }}
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="{{ form.content.id_for_label }}">Текст: </label>
+        {{ form.content }}
+        <div class="invalid-feedback">
+            {{ form.content.errors }}
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="{{ form.is_published.id_for_label }}">Опубликовано? </label>
+        {{ form.is_published }}
+        <div class="invalid-feedback">
+            {{ form.is_published.errors }}
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="{{ form.category.id_for_label }}">Категория: </label>
+        {{ form.category }}
+        <div class="invalid-feedback">
+            {{ form.category.errors }}
+        </div>
+    </div>
+    {% endcomment %}
+
+    {% comment %}
+    {#выводит поля в отдельном парагрофе полуавтоматический метод#}
+    {% for field in form %}
+    <div class="form-group">
+        {{ field.label_tag }}
+        {{ field }}
+        <div class="invalid-feedback">
+            {{ field.errors }}
+        </div>
+    </div>
+    {% endfor %}
+    {% endcomment %}
+
     <button type="submit" class="btn btn-primary btn-block">Добавить новость</button>
 </form>
 
