--- a/news_site/templates/inc/_nav.html
+++ b/news_site/templates/inc/_nav.html
@@ -8,7 +8,9 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'add_news' %}">Добавить новость</a></li>
+                {% if request.user.is_authenticated %} {#нет доступа если Не авторизован#}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'add_news' %}">Добавить новость</a></li>
+                {% endif %}
             </ul>
         </div>
     </nav>
