--- a/news_site/news/templates/news/login.html
+++ b/news_site/news/templates/news/login.html
@@ -1,3 +1,4 @@
+
 {% extends 'base.html' %}
 
 {% block title %}
@@ -12,6 +13,10 @@ Login :: {{ block.super }}
 
 <h1>Login</h1>
 
-
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary btn-block">Login</button>
+</form>
 
 {% endblock %}
